adicionado ponto de coleta

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,35 @@
+<head>
+ <link rel="stylesheet" href="../css/estilo.css">
+ </head>
+
+  <header>
+ <img class="displayed " src="../imagens/telaprincipal.jpg" alt="telaprincipal" >
+
+
+        <ul class="nav margem">
+       
+         
+             
+              <li><a href="#news">Inicio</a></li>
+              <li><a href="#contact"> Noticias</a></li>
+              <li><a href="#about">Tutoriais</a></li>
+              <li><a href="/pontocoletas">Pontos de coleta</a></li>
+             <li><a href="#about">Produtos</a></li>
+             <li><a href="#about"> Sobre</a></li>
+          
+      
+        </ul>
+ </header>
+<!--
 <div class="jumbotron">
     <h1 class="display-4">Bem-vindo ao site do Pantaneiro Ecologico</h1>
   <!--  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
         featured content or information.</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a> -->
+    <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a> 
 </div>
+-->
 
 <hr>
 
