alterado o tamanho do card bory

--- a/views/pontocoleta/index.handlebars
+++ b/views/pontocoleta/index.handlebars
@@ -1,10 +1,10 @@
-<h2>Lista de Pontos de Coleta:</h2>
+<h2>Pontos de Coleta:</h2>
 <hr>
 
 
 {{#each pontocoleta}}
 
-<div class="card mt-4">
+<div class="card mt-4" style="width: 26rem;">
 
     <div class="card-body">
 
