--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
               <li><a href="#contact"> Noticias</a></li>
               <li><a href="#about">Tutoriais</a></li>
               <li><a href="/pontocoletas">Pontos de coleta</a></li>
-             <li><a href="#about">Produtos</a></li>
+             <li><a href="/produtos">Produtos</a></li>
              <li><a href="#about"> Sobre</a></li>
           
       
