adicionado crud de ponto de coletas

--- a/views/admin/addpontocoleta.handlebars
+++ b/views/admin/addpontocoleta.handlebars
@@ -16,8 +16,19 @@
 <label for="nome">Nome do Local: </label>
 <input type="text" id="nome" name="nome" placeholder="Nome" class="form-control">
 
-<label for="endereco">Endereço: </label>
-<input type="text" name="endereco" placeholder="Endereço" class="form-control" required>
+<label for="bairro">Bairro: </label>
+<input type="text" name="bairro" placeholder="bairro" class="form-control" required>
+
+<label for="rua">Rua: </label>
+<input type="text" name="rua" placeholder="Rua" class="form-control" required>
+
+<label for="numero">Numero: </label>
+<input type="number" name="numero" placeholder="numero" class="form-control" required>
+
+<!--
+<label for="itens">Materiais: </label>
+<input type="text" name="itens" placeholder="materiais separados por virgual" class="form-control" required> -->
+
 
 
 <button type="submit" class="btn btn-success mt-4">Criar Ponto de coleta</button>
