--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -29,40 +29,36 @@ a{
 }
 
 
-/*
-.item {
-	flex: 1;
-	margin: 5px;
-	padding: 0 10px;
-	background: tomato;
-	text-align: center;
-	font-size: 1.5em;
-}
-
-.container {
-	max-width: 1000px;
-        max-height: 900px;
-	margin: 0 auto;
-	border: 1px solid #ccc;
-}
-
-
-
-.flex {
-	display: flex;
-}
-
-.itens {
-	margin: 150px;
-	background: white;
-	text-align: center;
-	font-size: 25px;
-} */
 
 .margem {
     
    margin-left: 200px; 
     
 }
+
+
+.pula-linha{
+ 
+  overflow-wrap: break-word;
+    
+
+}
+
+.ponto-coleta-titulo{
+
+  font-size: 26px;
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.ponto-coleta-texto{
+
+  font-size: 18px;
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: justify;
+
+}
+
+
 
 
