--- a/views/pontocoleta/index.handlebars
+++ b/views/pontocoleta/index.handlebars
@@ -1,16 +1,25 @@
+
+<head>
+ <link rel="stylesheet" href="../css/estilo.css">
+ </head>
+
+
 <h2>Pontos de Coleta:</h2>
 <hr>
 
 
 {{#each pontocoleta}}
 
-<div class="card mt-4" style="width: 26rem;">
+<div class="card mt-4 " style="width: 37rem;">
 
     <div class="card-body">
 
-        <h4>{{nome}}</h4>
-        <small>Endereço: {{endereco}}</small><br>
-        <small>Data: {{data}}</small><br>
+        <h4 class="ponto-coleta-titulo">{{nome}}</h4>
+        <strong class="ponto-coleta-texto">Endereço: </strong>
+        <small class="ponto-coleta-texto">| Bairro: {{bairro}}</small>
+        <small class="ponto-coleta-texto">| Rua: {{rua}}<small>
+        <small class="ponto-coleta-texto">| numero: {{numero}}</small>
+        
         
 
     </div>
@@ -21,3 +30,14 @@
 {{else}}
  <h4 class="mt-3"> Nenhum ponto de coleta registrado</h4>
 {{/each}}
+
+<label for="categoria">Categoria: </label>
+            <select name="categoria" class="custom-select">
+                {{#each categorias}}
+                <option value="{{_id}}">{{nome}}</option>
+
+                {{else}}
+                <option value="0">Nenhuma Categoria Registrada</option>
+                {{/each}}
+
+            </select>
