algunas alteracoes noticias

--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -22,6 +22,9 @@
 
             <label for="conteudo">Conteudo</label>
             <textarea name="conteudo" class="form-control" required></textarea>
+
+            <label for="slug">Slug</label>
+             <input type="text" name="slug" class="form-control" required>
             
            
                 <div class="form-group mt-3">
