--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -60,5 +60,49 @@ a{
 }
 
 
+.margem {
+  
+ margin-left: 200px; 
+  
+}
 
+
+* {
+box-sizing: border-box;
+}
+
+
+.card {
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+transition: 0.3s;
+width: 93%;
+border-radius: 5px;
+}
+
+/*img {
+border-radius: 5px 5px 0 0;
+  
+}
+*/
+.container {
+padding: 30px 26px;
+}
+
+
+
+.card-img-top {
+width: 400px;
+margin: 10px;
+position: relative;
+text-align: center;
+
+}
+.card-img-top::aft  er {
+content: attr(data-title); /* estilo que coloco a legenda no lugar */
+width: 100%;
+bottom: -20px;
+left: 20;
+padding-left: 100%;
+
+}
 
