realizando alterações e subindo novos arquivos-tutoriais

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,25 +1,25 @@
 <head>
- <link rel="stylesheet" href="../css/estilo.css">
- </head>
+    <link rel="stylesheet" href="../css/estilo.css">
+</head>
 
-  <header>
- <img class="displayed " src="../imagens/telaprincipal.jpg" alt="telaprincipal" >
+<header>
+    <img class="displayed " src="../imagens/telaprincipal.jpg" alt="telaprincipal">
 
 
-        <ul class="nav margem">
-       
-         
-             
-              <li><a href="#news">Inicio</a></li>
-              <li><a href="/admin/noticias"> Notícias</a></li>
-              <li><a href="#about">Tutoriais</a></li>
-              <li><a href="/pontocoletas">Pontos de coleta</a></li>
-             <li><a href="/produtos">Produtos</a></li>
-             <li><a href="/sobre"> Sobre</a></li>
-          
-      
-        </ul>
- </header>
+    <ul class="nav margem">
+
+
+
+        <li><a href="#news">Inicio</a></li>
+        <li><a href="#contact"> Noticias</a></li>
+        <li><a href="/tutorial">Tutoriais</a></li>
+        <li><a href="/pontocoletas">Pontos de coleta</a></li>
+        <li><a href="/produtos">Produtos</a></li>
+        <li><a href="#about"> Sobre</a></li>
+
+
+    </ul>
+</header>
 <!--
 <div class="jumbotron">
     <h1 class="display-4">Bem-vindo ao site do Pantaneiro Ecologico</h1>
@@ -39,16 +39,16 @@
 <div class="card mt-4">
 
     <div class="card-body">
-      
-       
+
+
 
         <h3>{{titulo}}</h3>
         <p>{{descricao}}</p>
-      <a href="/postagem/{{slug}}">  <button class="btn btn-success">Leia Mais</button> </a>
-          <hr>
+        <a href="/postagem/{{slug}}"> <button class="btn btn-success">Leia Mais</button> </a>
+        <hr>
         <small>Categoria: {{categoria.nome}}</small>
         <small>Data de Publicação: {{data}}</small>
-        
+
 
 
     </div>
