subindo sobre tutoriais com defeito e sobre

--- a/views/admin/admTutorial/addtutorial.handlebars
+++ b/views/admin/admTutorial/addtutorial.handlebars
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-body">
 
-                <form action="/admin/admTutorial/tutorial/nova" method="POST">
+                <form action="/admin/tutoriais/nova" method="POST">
 
                     <label for="titulo">Titulo: </label>
                     <input type="text" id="titulo" name="titulo" placeholder="Digite o Titulo" class="form-control">
