--- a/views/admin/admTutorial/tutoriais.handlebars
+++ b/views/admin/admTutorial/tutoriais.handlebars
@@ -2,7 +2,7 @@
 <hr>
 <a href="/admin/tutorial/add" <button class="btn btn-success">Novo Tutorial</button> </a>
 
-{{#each tutorial}}
+{{#each tutoriais}}
 
 <div class="card mt-4">
 
