--- a/views/tutoriais/index.handlebars
+++ b/views/tutoriais/index.handlebars
@@ -3,11 +3,14 @@
     <div class="card-body">
 
         <h1>{{tutorial.titulo}}</h1>
+        <h1>{{tutorial.subtitulo}}</h1>
+        {{tutoriais.texto}}
         <hr>
+        <small>Autor: {{tutorial.autor}}</small><br>
         <small>Data do Tutorial: {{tutorial.data}}</small><br>
         <hr>
 
-        {{tutorial.conteudo}}
+        
 
     </div>
 
