--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
         <li><a href="/tutorial">Tutoriais</a></li>
         <li><a href="/pontocoletas">Pontos de coleta</a></li>
         <li><a href="/produtos">Produtos</a></li>
-        <li><a href="#about"> Sobre</a></li>
+        <li><a href="/sobre"> Sobre</a></li>
 
 
     </ul>
