--- a/views/admin/controllerTutorial/edittutorial.handlebars
+++ b/views/admin/controllerTutorial/edittutorial.handlebars
@@ -1,18 +1,14 @@
 {{#each erros}}
 <div class="alert alert-danger">{{texto}}</div>
-
 {{else}}
 {{/each}}
-
 <div class="card">
-
     <div class="card-body">
-
         <h4>Editar Tutorial:</h4>
 
         <form action="/admin/tutorial/edit" method="POST">
 
-            <input type="hidden" value="{{postagem._id}}" name="id">
+            <input type="hidden" value="{{tutoriais._id}}" name="id">
 
             <label for="titulo">Titulo</label>
             <input type="text" name="titulo" class="form-control" value="{{tutorial.titulo}}" required>
