Grud-completo-tutoriais está pronto -claro-apenas partes referentes a string

--- a/views/admin/controllerTutorial/edittutorial.handlebars
+++ b/views/admin/controllerTutorial/edittutorial.handlebars
@@ -2,30 +2,54 @@
 <div class="alert alert-danger">{{texto}}</div>
 {{else}}
 {{/each}}
-<div class="card">
-    <div class="card-body">
-        <h4>Editar Tutorial:</h4>
 
-        <form action="/admin/tutorial/edit" method="POST">
-
-            <input type="hidden" value="{{tutoriais._id}}" name="id">
-
-            <label for="titulo">Titulo</label>
-            <input type="text" name="titulo" class="form-control" value="{{tutorial.titulo}}" required>
-
-            <label for="subtitulo">Subtitulo</label>
-            <input type="text" name="subtitulo" class="form-control" value="{{tutorial.subtitulo}}" required>
-
-            <label for="texto">Descrição</label>
-            <input type="text" name="texto" class="form-control" value="{{tutorial.texto}}" required>
-
-            <label for="autor">Autor</label>
-            <textarea name="autor" class="form-control" required>{{tutorial.autor}} </textarea>
-
-            <button class="btn btn-success mt-2" type="submit">Editar Tutorial</button>
-
-        </form>
+<h3>Editar Tutorial</h3>
+<hr>
+<center>
+    <div class="container">
+        <div class="card w-75">
+            <div class="card-body">
+                <form action="/admin/tutoriais/edit" method="POST">
+                <input type="hidden" value="{{tutorial._id}}" name="id">
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="titulo">Titulo: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="text" name="titulo" class="form-control" value="{{tutorial.titulo}}" required>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="subtitulo">Subtítulo: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="text" name="subtitulo" class="form-control" value="{{tutorial.subtitulo}}" required>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="texto">Assunto:</label>
+                        </div>
+                        <div class="col-sm-10">
+                            <textarea type="text" name="texto" class="form-control" rows="3">{{tutorial.texto}}</textarea>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="form-group row">
+                        <div class="col-2">
+                            <label for="autor">Autor: </label>
+                        </div>
+                        <div class="col-sm-10">
+                            <input name="autor" class="form-control" value="{{tutorial.autor}}">
+                        </div>
+                    </div>
+                    <br>
+                    <button class="btn btn-lg btn-success mt-2" type="submit">Editar </button>
+                </form>
+            </div>
+        </div>
     </div>
-
-
-</div>
+</center>
