--- a/views/admin/controllerTutorial/tutoriais.handlebars
+++ b/views/admin/controllerTutorial/tutoriais.handlebars
@@ -29,7 +29,7 @@
                     <footer class="autor" class="blockquote-footer">Autor: {{autor}}</footer>
                 </blockquote>
                 <div class="data" class="d-flex justify-content-end">Data de Publicação: {{data}}</div>
-                    <a href="/tutoriais/edit/{{_id}}"><button class="btn btn-lg btn-warning mt-4">Editar</button></a>
+                    <a href="/admin/tutoriais/edit/{{_id}}"><button class="btn btn-lg btn-warning mt-4">Editar</button></a>
                 </div>
             </div>
             <br>
