upload video, imagem,adio

--- a/views/admin/addNoticias.handlebars
+++ b/views/admin/addNoticias.handlebars
@@ -28,11 +28,20 @@
             
            
                 <div class="form-group mt-3">
-                    
+                      imagem
                     <input type="file" name="imagem" class="form-control-file">
                 </div>
 
-                
+                 <div class="form-group mt-3">
+                      video
+                    <input type="file" name="video" class="form-control-file">
+                </div>
+                   
+                  <div class="form-group mt-3">
+                      audio
+                    <input type="file" name="audio" class="form-control-file">
+                </div>
+ 
 
            <button class="btn btn-success mt-4" type="submit">Criar Noticia</button>
             
