--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
 
 
         <li><a href="#news">Inicio</a></li>
-        <li><a href="#contact"> Noticias</a></li>
+        <li><a href="/admin/noticias/nova"> Noticias</a></li>
         <li><a href="/tutorial">Tutoriais</a></li>
         <li><a href="/pontocoletas">Pontos de coleta</a></li>
         <li><a href="/produtos">Produtos</a></li>
