--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -1,26 +1,39 @@
 <center><h3>NOTÍCIA</h3></center>
 
+      
+<hr>
 
-    <div>
-  
+{{#each noticias}}
 
-        <h4>{{noticias.titulo}}</h4>
-        <small><strong>Descricao:</strong> {{noticias.descricao}}</small><br>
-        <small> <strong>Conteúdo:</strong> {{noticias.conteudo}}</small></br>
-         <img src="../upload{{noticias.imagem}}"/> 
-        {{!-- 
+<div class="card mt-4">
+
+    <div class="card-body">
+
+        <h4>{{nome}}</h4>
+        <small>descricao: {{descricao}}</small><br>
+        <small> <h1>Conteúdo:</h1> {{conteudo}}</small><br>
+         <img src="{{imagem}}"  width="250" height="150" /> >
+            
          <video width="320" height="240" controls>
-            <source src="../upload/teste.mp4" type="video/mp4">
+            <source src="../upload{{video}}" type="video/mp4">
            
-        </video>
+         </video>
          
          <audio controls>
-            <source src="/hey.mp3" type="audio/mpeg">
-            </audio>
-         --}}
+            <source src="../upload{{audio}}" type="audio/mpeg">
+         </audio>
+         
 
-    </div>
-    
+
      
         
+
+    </div>
+
+
+</div>
+
+{{else}}
+ <h4 class="mt-3"> Nehuma NOticia registrada </h4>>
+{{/each}}
 
