--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -12,7 +12,7 @@
         <h4>{{nome}}</h4>
         <small>descricao: {{descricao}}</small><br>
         <small> <h1>Conteúdo:</h1> {{conteudo}}</small><br>
-         <img src="{{imagem}}"  width="250" height="150" /> >
+         <img src="../upload{{imagem}}"  width="250" height="150" /> >
             
          <video width="320" height="240" controls>
             <source src="../upload{{video}}" type="video/mp4">
