adicionado atributo itens

--- a/views/admin/editpontocoleta.handlebars
+++ b/views/admin/editpontocoleta.handlebars
@@ -29,6 +29,9 @@
 <input type="number" name="numero" placeholder="numero" class="form-control" value="{{pontocoleta.numero}}" required>
 
 
+<label for="numero">Materiais: </label>
+<input type="text" name="itens" placeholder="materiais" class="form-control" value="{{pontocoleta.itens}}" required>
+
 
 <button type="submit" class="btn btn-success mt-4">Editar Ponto de coleta</button>
 
