--- a/views/pontocoleta/index.handlebars
+++ b/views/pontocoleta/index.handlebars
@@ -15,11 +15,12 @@
     <div class="card-body">
 
         <h4 class="ponto-coleta-titulo">{{nome}}</h4>
-        <strong class="ponto-coleta-texto">Endereço: </strong>
-        <small class="ponto-coleta-texto">| Bairro: {{bairro}}</small>
-        <small class="ponto-coleta-texto">| Rua: {{rua}}<small>
-        <small class="ponto-coleta-texto">| numero: {{numero}}</small>
+        <small class="ponto-coleta-texto"> Rua: {{rua}}<small>
+        <small class="ponto-coleta-texto">, n° {{numero}}</small><br>
         
+        
+        <small class="ponto-coleta-texto">{{itens}}</small>
+ 
         
 
     </div>
