--- a/views/admin/pontocoleta.handlebars
+++ b/views/admin/pontocoleta.handlebars
@@ -13,6 +13,7 @@
         <small>Rua: {{rua}}</small><br>
         <small>Numero: {{numero}}</small><br>
         <small>Data: {{data}}</small><br>
+        <small>Materiais: {{itens}}</small><br>
 
         <a href="/admin/ponto-coleta/edit/{{_id}}"><button class="btn btn-success mt-4">Editar Ponto Coleta</button></a>
 
