adicionado atributo horarioAtendimento

--- a/views/admin/addpontocoleta.handlebars
+++ b/views/admin/addpontocoleta.handlebars
@@ -25,9 +25,12 @@
 <label for="numero">Numero: </label>
 <input type="number" name="numero" placeholder="numero" class="form-control" required>
 
-<!--
+<label for="horarioAtendimento">horario de atendimento: </label>
+<input type="text" name="horarioAtendimento" placeholder="horario de Atendimento" class="form-control">
+
+
 <label for="itens">Materiais: </label>
-<input type="text" name="itens" placeholder="materiais separados por virgual" class="form-control" required> -->
+<input type="text" name="itens" placeholder="materiais separados por virgual" class="form-control" > 
 
 
 
