--- a/views/admin/editpontocoleta.handlebars
+++ b/views/admin/editpontocoleta.handlebars
@@ -28,6 +28,9 @@
 <label for="numero">Numero: </label>
 <input type="number" name="numero" placeholder="numero" class="form-control" value="{{pontocoleta.numero}}" required>
 
+<label for="horarioAtendimento">horario de atendimento: </label>
+<input type="text" name="horarioAtendimento" placeholder="horario de Atendimento" class="form-control" value="{{pontocoleta.horarioAtendimento}}">
+
 
 <label for="numero">Materiais: </label>
 <input type="text" name="itens" placeholder="materiais" class="form-control" value="{{pontocoleta.itens}}" required>
