--- a/views/admin/pontocoleta.handlebars
+++ b/views/admin/pontocoleta.handlebars
@@ -12,6 +12,7 @@
         <small>Bairro: {{bairro}}</small><br>
         <small>Rua: {{rua}}</small><br>
         <small>Numero: {{numero}}</small><br>
+        <small>Horario de atendimento: {{horarioAtendimento}}</small><br>
         <small>Data: {{data}}</small><br>
         <small>Materiais: {{itens}}</small><br>
 
