--- a/views/pontocoleta/index.handlebars
+++ b/views/pontocoleta/index.handlebars
@@ -17,9 +17,9 @@
         <h4 class="ponto-coleta-titulo">{{nome}}</h4>
         <small class="ponto-coleta-texto"> Rua: {{rua}}<small>
         <small class="ponto-coleta-texto">, n° {{numero}}</small><br>
+        <small class="ponto-coleta-texto">{{horarioAtendimento}}</small><br>
         
-        
-        <small class="ponto-coleta-texto">{{itens}}</small>
+          <small class="ponto-coleta-texto">{{itens}}</small>
  
         
 
