--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 </head>
 
 <header>
-    <img class="displayed " src="../imagens/telaprincipal.jpg" alt="telaprincipal">
+    <img class="displayed " src="../imagens/logo.jpeg" alt="telaprincipal">
 
 
     <ul class="nav margem">
@@ -11,7 +11,7 @@
 
 
         <li><a href="#news">Inicio</a></li>
-        <li><a href="/admin/noticias/nova"> Noticias</a></li>
+        <li><a href="/admin/noticias"> Noticias</a></li>
         <li><a href="/tutorial">Tutoriais</a></li>
         <li><a href="/pontocoletas">Pontos de coleta</a></li>
         <li><a href="/produtos">Produtos</a></li>
