--- a/views/admin/addpontocoleta.handlebars
+++ b/views/admin/addpontocoleta.handlebars
@@ -30,7 +30,7 @@
 
 
 <label for="itens">Materiais: </label>
-<input type="text" name="itens" placeholder="materiais separados por virgual" class="form-control" > 
+<input type="text" name="itens" placeholder="materiais separados por virgula" class="form-control" > 
 
 
 
