--- a/views/admin/editpontocoleta.handlebars
+++ b/views/admin/editpontocoleta.handlebars
@@ -33,7 +33,7 @@
 
 
 <label for="numero">Materiais: </label>
-<input type="text" name="itens" placeholder="materiais" class="form-control" value="{{pontocoleta.itens}}" required>
+<input type="text" name="itens" placeholder="materiais separado por virgula" class="form-control" value="{{pontocoleta.itens}}" required>
 
 
 <button type="submit" class="btn btn-success mt-4">Editar Ponto de coleta</button>
