--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -54,7 +54,7 @@ a{
 .ponto-coleta-texto{
 
   font-size: 18px;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:Arial;
   text-align: justify;
 
 }
