tag audio e video

--- a/views/noticias/homeNoticias.handlebars
+++ b/views/noticias/homeNoticias.handlebars
@@ -14,7 +14,7 @@
        <center>
          <img src="../upload{{noticias.imagem}}"  width="400" height="400" /> 
         </br>    
-      <small> <h1>Conteúdo:</h1> {{noticias.conteudo}}</small><br>
+      <small> Conteúdo: {{noticias.conteudo}}</small><br>
         
          <video width="320" height="240" controls>
             <source src="../upload{{noticias.video}}" type="video/mp4">
@@ -22,13 +22,13 @@
          </video>
 
          <br>
-         
+         <p>
          <audio controls>
-            <source src="../upload{{audio}}" type="audio/mpeg">
+            <source src="../upload{{noticias.audio}}" type="audio/mpeg">
          </audio>
          </br>
          </center>
-
+         </p>
      
         
 
