--- a/views/produto/index.handlebars
+++ b/views/produto/index.handlebars
@@ -11,13 +11,12 @@
         <h3>{{titulo}}</h3>
         <p>{{subtitulo}}</p>
         <hr>
-        <small>Data: {{data}}</small><br>
+        <small>Data de Publicação: {{data}}</small><br>
 		<hr>
         <h6>{{texto}}</h6>
 
         <a href="/produto/{{slug}}"> <button class="btn btn-success">Leia Mais</button> </a>
         <hr>
-        <small>Data de Publicação: {{data}}</small>
     </div>
 
 </div>
