alteando as coisas e melhorando design e adicionando footer

--- a/views/sobre/index.handlebars
+++ b/views/sobre/index.handlebars
@@ -1,25 +1,11 @@
-<!DOCTYPE HTML>
- <html lang="pt-br">
-<head>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-	<title>Sobre</title>
-		<style type="text/css">
-            body {
-				font-family: Arial, Helvetica, sans-serif;
-				text-justify:distribute-all-lines;
-			}
-        </style>
-</head>
-<body>
-	 <header>
+<div class="container">
+	<header>
 		<img src="../imagens/logo.jpeg" alt="pantaneiro ecológico" width="50%" max-width= "100%" height="auto">
-	    <h1>Quem somos</h1>
+		<h1>Quem somos</h1>
 	</header>
- 
-	<section>
-	    <article>
-	        <p> O portal Pantaneiro Ecológico é um projeto criado por alunos da Universidade Federal de 
+	<div>
+		<article>
+			<p> O portal Pantaneiro Ecológico é um projeto criado por alunos da Universidade Federal de 
 				Mato Grosso do Sul, com o intuito de conscientizar e informar a população sobre a importância do
 				descarte correto de resíduos sólidos.
 				O gerenciamento inadequado dos resíduos sólidos gera impactos profundos no meio-ambiente,
@@ -27,13 +13,10 @@
 				soluções sobre redução, reutilização e reciclagem, ações ambientais e informações para
 				a população, promovendo um desenvolvimento
 				saudável e sustentável.
-				
-				
 			</p>
-	    </article>
- 
-	</section>
- 
+		</article>
+	</div>
+
 	<aside>
 		<h4>Participantes:</h4>
 		<ul>
@@ -46,14 +29,8 @@
 			<li>Fleury </li>
 			<li>Silviane Brito</li>
 		</ul>
-
 	</aside>
-	<br>
-	<footer>
-		<h4>Apoio:</h4>
-		<img src="../imagens/ufms.png" alt="ufms" width= "15%">
-		<img src="../imagens/apoio.png" alt="fundação de meio ambiente do pantanal" width= "30%">
-	</footer>
-	<br>
-</body>
-</html>
+</div>
+
+
+
