--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,30 +5,35 @@
         <title>Pantaneiro Ecológico</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-       <link rel="stylesheet" href="/css/bootstrap.css">
-
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.css"> 
+        <style>
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+                text-justify:distribute-all-lines;
+                margin: 0;
+                padding: 0;
+                height: 100px;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #858796;
+                text-align: left;
+                background-color: #fff;
+                overflow-x: hidden;
+            }
+        </style>       
     </head>
     <body>
-
-
-    {{>_navbar}}  
-       
-
+        {{>_navbar}}  
         <!-- mt-4 da um espaço de 4 unidades do topo -->
-    <div class="container mt-4">
-         {{>_msg}}
-   {{{body}}}
-
-</div>  
-
+        <div class="container">
+            {{>_msg}}
+            {{{body}}}
+        </div>  
+        {{>_footer}}
     </body>
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="/js/bootstrap.js"></script>
-
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.js"></script>
 </html>
