--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,8 +10,9 @@
 
 
 
-        <li><a href="#news">Inicio</a></li>
-        <li><a href="/admin/noticias"> Noticias</a></li>
+       
+        <li><a href="/">Inicio</a></li>
+        <li><a href="/noticias"> Noticias</a></li>
         <li><a href="/tutorial">Tutoriais</a></li>
         <li><a href="/pontocoletas">Pontos de coleta</a></li>
         <li><a href="/produtos">Produtos</a></li>
