--- a/views/admin/controllerTutorial/addtutorial.handlebars
+++ b/views/admin/controllerTutorial/addtutorial.handlebars
@@ -18,25 +18,28 @@
                             <label for="titulo">Titulo: </label>
                         </div>
                         <div class="col-sm-10">
-                            <input type="text" id="titulo" name="titulo" placeholder="Digite o Titulo" class="form-control">
+                            <input type="text" id="titulo" name="titulo" placeholder="Digite o Titulo"
+                                class="form-control">
                         </div>
                     </div>
                     <br>
                     <div class="form-group row">
                         <div class="col-2">
-                        <label for="subtitulo">Subtítulo: </label>
+                            <label for="subtitulo">Subtítulo: </label>
                         </div>
                         <div class="col-sm-10">
-                            <input type="text" id="subtitulo" name="subtitulo" placeholder="Subtitulo do tutorial" class="form-control">
+                            <input type="text" id="subtitulo" name="subtitulo" placeholder="Subtitulo do tutorial"
+                                class="form-control">
                         </div>
-                    </div>                                    
+                    </div>
                     <br>
                     <div class="form-group row">
                         <div class="col-2">
                             <label for="texto">Assunto:</label>
                         </div>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="texto" name="texto" placeholder="Assunto do tutorial" rows="3"></textarea>
+                            <textarea class="form-control" id="texto" name="texto" placeholder="Assunto do tutorial"
+                                rows="3"></textarea>
                         </div>
                     </div>
                     <br>
@@ -44,13 +47,19 @@
                         <div class="col-2">
                             <label for="autor">Autor: </label>
                         </div>
-                        
+
                         <div class="col-sm-10">
-                            <input type="text" id="autor" name="autor" placeholder="autor do tutorial" class="form-control">
+                            <input type="text" id="autor" name="autor" placeholder="autor do tutorial"
+                                class="form-control">
                         </div>
+                    </div>
+                    <div class="form-group mt-3">
+                        imagem
+                        <input type="file" name="imagem" class="form-control-file">
                     </div>
                     <br>
                     <button type="submit" class="btn btn-success"> Tutorial</button>
+
                 </form>
             </div>
         </div>
