--- a/views/admin/controllerTutorial/tutoriais.handlebars
+++ b/views/admin/controllerTutorial/tutoriais.handlebars
@@ -22,6 +22,7 @@
                 <div class="subtitulo">Subtítulo: {{subtitulo}}</div>
             </div>
             <div class="card-body">
+                <img src="../upload/tutoriais{{imagem.imagem}}" widt h="400" height="400" />
                 <p class="texto-tutorial" class="ponto-coleta-texto">{{texto}}<small>
             </div>
             <div class="card-footer text-muted">
