footer-ok,sobre-finalizado

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -1,18 +1,10 @@
 <head>
     <link rel="stylesheet" href="../css/app.css">
 </head>
-<div class="site-footer">
-    <div class="row justify-content-center">
-        <div class="col-4 ">
-            <img src="../imagens/ufms.png" class="imagem1">
+<nav class="fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+    <div class="d-flex justify-content-center">
+        <div class="copyright">
+            Copyright &copy; 2019 <span>Pantaneiro Ecológico</span>
         </div>
-        <div class="col-4">
-            <div class="copyright text-center">
-                Copyright &copy; 2019 <span>Pantaneiro Ecológico</span>
-            </div>
-        </div>
-        <div class="col-4">
-            <img src="../imagens/apoio.png" class="imagem2">
-        </div>
-    </div>
-</div>
+    </div>    
+</nav>
