--- a/views/sobre/index.handlebars
+++ b/views/sobre/index.handlebars
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" href="../css/app.css">
+</head>
 <div class="container">
 	<header>
 		<img src="../imagens/logo.jpeg" alt="pantaneiro ecológico" width="50%" max-width= "100%" height="auto">
@@ -29,8 +32,23 @@
 			<li>Fleury </li>
 			<li>Silviane Brito</li>
 		</ul>
+		<div class="row">
+			<div class="col-12">
+				<h4>Apoio:</h4>
+			</div>
+			<div class="col-4">
+				<img src="../imagens/ufms.png" class="imagem1">
+			</div>
+			<div class="col-8 d-flex justify-content-start">
+				<img src="../imagens/apoio.png" class="imagem2">
+			</div>
+		</div>	
+			
+			
+					
 	</aside>
 </div>
+
 
 
 
