--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,17 +1,16 @@
-.site-footer {
-  background: linear-gradient(to bottom,#343a40,#343a40);
-  padding: 50px 0;
-  margin-right: 0;
-}
-.site-footer .copyright{
-  font-family:Arial, Helvetica !important;
+.copyright{
+  font-family:Arial, Helvetica, sans-serif !important;
+  font-size: 18px;
   color:white;
+  padding: 8px;
 }
 .imagem1{
-    max-width:20%;
+    max-width:67%;
+    max-height: 85%;
     height:auto;
 }
 .imagem2{
-    max-width:20%;
+    max-width:70%;
+    max-height: 70%;
     height:auto;
 }
