retirando botão de inserção da pagina de noticias

--- a/views/admin/noticias.handlebars
+++ b/views/admin/noticias.handlebars
@@ -30,7 +30,7 @@
   {{/each}}
   </div>
       
-         <a href="/admin/noticias/add" <button class="btn btn-success">Nova Noticia</button> </a>
+         {{!-- <a href="/admin/noticias/add" <button class="btn btn-success">Nova Noticia</button> </a> --}}
   </center>
 
 
