subindo rota de noticias,  alterando design

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,28 +21,14 @@
 
     </ul>
 </header>
-<!--
-<div class="jumbotron">
-    <h1 class="display-4">Bem-vindo ao site do Pantaneiro Ecologico</h1>
-  <!--  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a> 
-</div>
--->
-
 <hr>
 
 <h2>Noticias Recentes:</h2>
 
-<div class="card-deck"> 
 
-
-
-{{#each noticias}} 
 <div classs="row>">
-<div class="col-sm-12" >
+    <div class="car-groud">
+    {{#each noticias}}
         <div class="card" >
               <a href="/homeNoticias/{{slug}}"><img src="../upload{{imagem}}" class="card-img-top" alt="..."></a>
             <div class="card-body">
@@ -52,11 +38,10 @@
       
             </div>
         </div>
-        
-  {{else}}
-  </div>
-  </div>
-  <center><p>Nenhuma noticia Registrada</p></center>
-  {{/each}}
+  
+    </div>
 </div>
+{{else}}
+<center><p>Nenhuma noticia Registrada</p></center>
+{{/each}}
      
